[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unblockme"
version = "0.0.2"
authors = [
  { name="Liu Zuo Lin", email="zlliu246@gmail.com" },
]
description = "A package that solves an unblockme puzzle for you"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'unprint'
]

[project.urls]
Homepage = "https://github.com/zlliu246/unblockme"
Issues = "https://github.com/zlliu246/unblockme/issues"